@@ -201,6 +201,7 @@ zero_corruption_when_off = true
 disallow_land_units_from_affecting_water_tiles = true
 
 dont_end_units_turn_after_airdrop = false
+allow_airdrop_without_airport = false
 enable_negative_pop_pollution = true
 
 ; Here it's possible to set buildings as prerequisites for unit production. It's possible for a unit type to have multiple prereq buildings up to a
